--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,23 @@ body{
   background-color: #f6f8ff;
 }
 
+.dark-mode{
+  color: #fff !important;
+}
+
+.dark-mode-body{
+  background-color: #141d2f;
+}
+
+.dark-mode-background-light{
+  background-color: #1e2a47 !important;
+  box-shadow: 0px 36px 50px -10px #0003 !important;
+}
+
+.dark-mode-background-dark{
+  background-color: #141d2f !important;
+}
+
 .container {
   width: 75rem;
   padding-left: 0rem;
@@ -50,9 +67,17 @@ body{
   width: 100%;
 }
 
+.form-icon{
+  position: absolute;
+  top: 2rem;
+  left: 2rem;
+}
+
 .btn-mode{
   display: flex;
+  align-items: center;
   gap: 2rem;
+  cursor: pointer;
 }
 
 .mode-text{
@@ -65,12 +90,13 @@ body{
   align-items: center;
   position: relative;
   margin-top: 3rem;
+  border-radius: 1.5rem;
   box-shadow: 0px 36px 50px -10px #bdc8ef33;
 }
 
 .search-input{
   width: 100%;
-  padding: 2rem;
+  padding: 2rem 2rem 2rem 6rem;
   border-radius: 1.5rem;
   border: none;
   font-size: 2rem;
@@ -116,6 +142,7 @@ body{
 .user-header{
   display: flex;
   justify-content: space-between;
+  gap: 3rem;
 }
 
 .avatar{
@@ -155,7 +182,7 @@ body{
 
 .user-date,
 .user-bio{
-  font-size: 1.5rem;
+  font-size: 1.4rem;
 }
 
 .user-info {
@@ -163,6 +190,10 @@ body{
   gap: 1.4rem;
   width: 47.5%;
   font-size: 1.5rem;
+}
+
+.user-info p {
+  font-size: 1.3rem;
 }
 
 .user{
@@ -218,6 +249,10 @@ body{
 
   .header {
     margin-top: 3rem; 
+  }
+
+  .form-icon{
+    width: 2.7rem;
   }
 
   }
